# FlashRL

./: .dockerignore  .gitignore  README.md  dev.sh  pyproject.toml
docker/: operator.Dockerfile  runtime.Dockerfile  serving-vllm.Dockerfile  training-fsdp.Dockerfile
docs/: grpo-loss-presets.md  overview.md  platform-architecture.md  run_viewer.html  viewer.html  weight-sync.md
examples/: README.md  __init__.py  train_grpo.py  train_grpo_simple.py  train_reasoning.py
examples/reasoning/: README.md  config.yaml  (+4 more)
flashrl/: __init__.py  __main__.py  flashrl.py
metric/: docker-compose.yml
scripts/: build_platform_images.sh  cleanup_platform.sh  plot_forward_reverse_kl.py  plot_kl_estimators.py  plot_kl_foundations.py  plot_logprob_probability.py  plot_rl_algorithm_equations_table.py  plot_rl_posttraining_building_blocks.py  run_minikube_math_e2e.py  run_platform_job.sh
tests/: __init__.py  conftest.py  platform_hooks.py  test_abstractions.py  test_admin.py  test_admin_viewer_e2e.py  test_agent_harness_example.py  test_agent_tools.py  test_backends.py  test_data_models.py  test_device.py  test_distributed_services.py  test_framework_api.py  test_grpo.py  test_grpo_clipping.py  test_grpo_gates.py  test_grpo_kl.py  test_grpo_presets.py  test_grpo_presets_integration.py  test_logging.py  test_memory_observability.py  test_memory_optimization.py  test_metrics.py  test_mock_checkpointing_example.py  test_models.py  test_platform_crd.py  test_platform_minikube_e2e.py  test_platform_operator.py  test_platform_runtime.py  test_plot_kl_foundations.py  test_plot_logprob_probability.py  test_plot_rl_algorithm_equations_table.py  test_plot_rl_posttraining_building_blocks.py  test_reasoning_code_example.py  test_reasoning_example.py  test_rollout_reward.py  test_vllm_backend.py  test_vllm_metal_backend.py  test_vllm_server.py  tool_runtime_helpers.py
(+275 files in other folders)
