[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flashrl"
version = "0.0.1"
description = "A learning-first RL project for LLM post-training"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "datasets>=3.0.0",
    "fastapi>=0.115.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "prometheus-client>=0.20.0",
    "rich>=13.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
vllm = [
    "vllm>=0.16.0",
]
dev = [
    "httpx>=0.28.0",
    "playwright>=1.55.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-playwright>=0.7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: fast offline deterministic tests",
    "integration: optional local-service or heavier smoke tests",
]
